--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
-
   },
   "dependencies": {
+    "@mintbase-js/react": "^0.6.5",
+    "autoprefixer": "^10.4.20",
     "crypto-js": "^4.2.0",
     "express": "^4.21.1",
     "mysql": "^2.18.1",
     "next": "15.0.1",
     "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021"
+    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "web3": "^4.14.0",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.2.2",
@@ -32,5 +35,6 @@
   "main": "index.js",
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "packageManager": "pnpm@9.12.2+sha512.22721b3a11f81661ae1ec68ce1a7b879425a1ca5b991c975b074ac220b187ce56c708fe5db69f4c962c989452eee76c82877f4ee80f474cebd61ee13461b6228"
 }
